# rust-surrealdb-fly

./: README.md
surrealdb/: Dockerfile  README.md  docker-compose.yml  fly.toml
test-connection/: Cargo.toml
test-connection/src/: main.rs
