[package]
name = "rust-surrealdb-fly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
surrealdb = { version = "1.0.0-beta.9", default-features = true, features = ["protocol-ws", "native-tls"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
